Test tweaks, new log in tests using global setup, test to fill account info via CSV

--- a/src/ContosoTraders.Ui.Website/.gitignore
+++ b/src/ContosoTraders.Ui.Website/.gitignore
@@ -21,9 +21,12 @@ yarn-debug.log*
 yarn-error.log*
 
 appsettings.Development.json
+
+# Playwright tests
 /test-results/
 /playwright-report/
 /playwright/.cache/
 /test-results/
 /playwright-report/
 /playwright/.cache/
+storageState.json
