--- a/src/ContosoTraders.Ui.Website/package.json
+++ b/src/ContosoTraders.Ui.Website/package.json
@@ -68,6 +68,7 @@
     "@playwright/test": "^1.28.1",
     "@types/node": "^18.11.18",
     "babel-plugin-macros": "^2.8.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "csv-parse/sync" : "^4.18.0"
   }
 }
