--- a/src/ContosoTraders.Ui.Website/package.json
+++ b/src/ContosoTraders.Ui.Website/package.json
@@ -69,6 +69,6 @@
     "@types/node": "^18.11.18",
     "babel-plugin-macros": "^2.8.0",
     "typescript": "^4.9.4",
-    "csv-parse/sync" : "^4.18.0"
+    "csv-parse" : "5.3.3"
   }
 }
