--- a/src/ContosoTraders.Ui.Website/package.json
+++ b/src/ContosoTraders.Ui.Website/package.json
@@ -68,7 +68,7 @@
     "@playwright/test": "^1.28.1",
     "@types/node": "^18.11.18",
     "babel-plugin-macros": "^2.8.0",
-    "typescript": "^4.9.4",
-    "csv-parse" : "5.3.3"
+    "csv-parse": "5.3.3",
+    "typescript": "^4.9.4"
   }
 }
