--- a/.github/workflows/contoso-traders-cloud-testing-template.yml
+++ b/.github/workflows/contoso-traders-cloud-testing-template.yml
@@ -336,7 +336,7 @@ jobs:
           cache: npm
           cache-dependency-path: src/ContosoTraders.Ui.Website/package-lock.json        
       - name: npm ci
-        run: npm ci
+        run: npm ci --legacy-peer-deps
         working-directory: src/ContosoTraders.Ui.Website
       - name: npm run build
         run: npm run build
@@ -626,7 +626,7 @@ jobs:
       - name: set ui cdn endpoint
         run: echo "REACT_APP_BASEURLFORPLAYWRIGHTTESTING"="https://${{ needs.provision.outputs.uiCdnEndpoint }}" >> $GITHUB_ENV
       - name: install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
       - name: run playwright tests
         run: HOME=/root npx playwright test --project=${{ matrix.project }} --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
       - name: upload playwright report
