--- a/src/ContosoTraders.Ui.Website/package.json
+++ b/src/ContosoTraders.Ui.Website/package.json
@@ -65,9 +65,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@playwright/test": "^1.28.1",
+    "@playwright/test": "^1.30.0",
     "@types/node": "^18.11.18",
     "babel-plugin-macros": "^2.8.0",
+    "csv-parse": "^5.3.4",
     "typescript": "^4.9.4"
   }
 }
