--- a/.github/workflows/contoso-traders-cloud-testing-template.yml
+++ b/.github/workflows/contoso-traders-cloud-testing-template.yml
@@ -56,8 +56,8 @@ jobs:
       #
       # section #1: provisioning the resources on Azure using bicep templates
       #
-      - name: checkout code
-        uses: actions/checkout@v3
+      # - name: checkout code
+      #   uses: actions/checkout@v3
       - name: azure login
         uses: azure/login@v1
         with:
@@ -66,6 +66,7 @@ jobs:
         uses: azure/CLI@v1
         with:
           inlineScript: |
+            az config set extension.use_dynamic_install=yes_without_prompt
             $a = $(az ad app list --query "[?displayName=='footempdeletemelater'].displayName" -o tsv)
             echo $a
       # # The first step is to create the resource group: `contoso-traders-rg`.
