--- a/.github/workflows/contoso-traders-cloud-testing-template.yml
+++ b/.github/workflows/contoso-traders-cloud-testing-template.yml
@@ -67,8 +67,7 @@ jobs:
         with:
           inlineScript: |
             az config set extension.use_dynamic_install=yes_without_prompt
-            $a = $(az ad app list --query "[?displayName=='footempdeletemelater'].displayName" -o tsv)
-            echo $a
+            echo app name = $(az ad app list --query "[?displayName=='footempdeletemelater'].displayName" -o tsv)
       # # The first step is to create the resource group: `contoso-traders-rg`.
       # # The below step can also be manually executed as follows:
       # # az deployment sub create --location {LOCATION} --template-file .\createResourceGroup.bicep
