--- a/.github/workflows/contoso-traders-cloud-testing-template.yml
+++ b/.github/workflows/contoso-traders-cloud-testing-template.yml
@@ -68,8 +68,25 @@ jobs:
         with:
           inlineScript: |
             az config set extension.use_dynamic_install=yes_without_prompt
-            az ad app list --query "[?displayName=='${{ env.AZURE_AD_APP_NAME }}'].displayName" -o tsv
-            az ad --help
+            appExists=$(az ad app list --query "[?displayName=='${{ env.AZURE_AD_APP_NAME }}'].displayName" -o tsv)
+            if [ -z "$appExists" ]; then
+              echo "Creating Azure AD app '${{ env.AZURE_AD_APP_NAME }}'"
+              az ad app create --display-name ${{ env.AZURE_AD_APP_NAME }} --reply-urls "https://${{ env.AZURE_AD_APP_NAME }}.azurewebsites.net/.auth/login/aad/callback" --required-resource-accesses @- << EOF
+              [
+                {
+                  "resourceAppId": "00000003-0000-0000-c000-000000000000",
+                  "resourceAccess": [
+                    {
+                      "id": "e1fe6dd8-ba31-4d61-89e7-88639da4683d",
+                      "type": "Scope"
+                    }
+                  ]
+                }
+              ]
+              EOF
+            else
+              echo "Azure AD app '${{ env.AZURE_AD_APP_NAME }}' already exists"
+            fi
       # # The first step is to create the resource group: `contoso-traders-rg`.
       # # The below step can also be manually executed as follows:
       # # az deployment sub create --location {LOCATION} --template-file .\createResourceGroup.bicep
