--- a/.github/workflows/contoso-traders-cloud-testing-template.yml
+++ b/.github/workflows/contoso-traders-cloud-testing-template.yml
@@ -71,7 +71,7 @@ jobs:
             appExists=$(az ad app list --query "[?displayName=='${{ env.AZURE_AD_APP_NAME }}'].displayName" -o tsv)
             if [ -z "$appExists" ]; then
               echo "Creating Azure AD app '${{ env.AZURE_AD_APP_NAME }}'"
-              az ad app create --display-name ${{ env.AZURE_AD_APP_NAME }} --reply-urls "https://${{ env.AZURE_AD_APP_NAME }}.azurewebsites.net/.auth/login/aad/callback" --required-resource-accesses @- << EOF
+              az ad app create --display-name ${{ env.AZURE_AD_APP_NAME }} --reply-urls "https://${{ env.AZURE_AD_APP_NAME }}.azurewebsites.net/.auth/login/aad/callback" --required-resource-accesses @- <<-EOF
               [
                 {
                   "resourceAppId": "00000003-0000-0000-c000-000000000000",
