--- a/.github/workflows/contoso-traders-cloud-testing-template.yml
+++ b/.github/workflows/contoso-traders-cloud-testing-template.yml
@@ -332,11 +332,11 @@ jobs:
         run: echo "REACT_APP_APIURL"="https://${{ steps.get-productsApiEndpoint.outputs.productsApiEndpoint }}/v1" >> $GITHUB_ENV
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
           cache: npm
-          cache-dependency-path: src/ContosoTraders.Ui.Website/package-lock.json        
+          cache-dependency-path: src/ContosoTraders.Ui.Website/package-lock.json
       - name: npm ci
-        run: npm ci --legacy-peer-deps
+        run: npm ci
         working-directory: src/ContosoTraders.Ui.Website
       - name: npm run build
         run: npm run build
@@ -619,7 +619,7 @@ jobs:
         # Cache deps
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
           cache: npm
           cache-dependency-path: src/ContosoTraders.Ui.Website/package-lock.json
         # Set env variables for testing endpoints
@@ -630,7 +630,7 @@ jobs:
       - name: set ui cdn endpoint
         run: echo "REACT_APP_BASEURLFORPLAYWRIGHTTESTING"="https://${{ needs.provision.outputs.uiCdnEndpoint }}" >> $GITHUB_ENV
       - name: install dependencies
-        run: npm ci --legacy-peer-deps
+        run: npm ci
       - name: run playwright tests
         run: HOME=/root npx playwright test --project=${{ matrix.project }} --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
       - name: upload playwright report
