--- a/.github/workflows/contoso-traders-cloud-testing-template.yml
+++ b/.github/workflows/contoso-traders-cloud-testing-template.yml
@@ -17,6 +17,7 @@ env:
   AKS_SECRET_NAME_ACR_PASSWORD: contoso-traders-acr-password
   AKS_SECRET_NAME_KV_ENDPOINT: contoso-traders-kv-endpoint
   AKS_SECRET_NAME_MI_CLIENTID: contoso-traders-mi-clientid
+  AZURE_AD_APP_NAME: contoso-traders-cloud-testing-app
   CARTS_ACA_NAME: contoso-traders-carts
   CARTS_ACR_REPOSITORY_NAME: contosotradersapicarts
   CARTS_INTERNAL_ACA_NAME: contoso-traders-intcarts
@@ -54,7 +55,7 @@ jobs:
       cancel-in-progress: true
     steps:
       #
-      # section #1: provisioning the resources on Azure using bicep templates
+      # section #1: setup the Azure AD app
       #
       - name: checkout code
         uses: actions/checkout@v3
@@ -62,6 +63,45 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.SERVICEPRINCIPAL }}
+      # create the Azure AD application (and update it if it already exists).
+      # note: This is an idempotent operation.
+      - name: create/update azure active directory app
+        uses: azure/CLI@v1
+        with:
+          inlineScript: az ad app create --display-name ${{ env.AZURE_AD_APP_NAME}}${{ vars.SUFFIX }} --sign-in-audience AzureADandPersonalMicrosoftAccount
+      - name: get azure ad app id
+        uses: azure/CLI@v1
+        id: get-azureAdAppId
+        with:
+          inlineScript: echo "azureAdAppId"="$(az ad app list --display-name ${{ env.AZURE_AD_APP_NAME }}${{ vars.SUFFIX }} --query [].id -o tsv)" >> $GITHUB_OUTPUT
+      - name: register app as a spa
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
+            az rest \
+              --method PATCH \
+              --uri https://graph.microsoft.com/v1.0/applications/${{ steps.get-azureAdAppId.outputs.azureAdAppId }} \
+              --headers 'Content-Type=application/json' \
+              --body '{"spa":{"redirectUris":["https://localhost:3000/authcallback","http://localhost:3000/authcallback"]}}'
+      - name: enable issuance of id, access tokens
+        uses: azure/CLI@v1
+        with:
+          inlineScript: az ad app update --id ${{ steps.get-azureAdAppId.outputs.azureAdAppId }} --enable-access-token-issuance true --enable-id-token-issuance true
+      - name: enable email claim in access token
+        uses: azure/CLI@v1
+        with:
+          inlineScript: az ad app update --id ${{ steps.get-azureAdAppId.outputs.azureAdAppId }} --optional-claims "{\"accessToken\":[{\"name\":\"email\",\"essential\":false}]}"
+      - name: request permissions for Microsoft Graph
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
+            az ad app permission add \
+              --id ${{ steps.get-azureAdAppId.outputs.azureAdAppId }} \
+              --api 00000003-0000-0000-c000-000000000000 \
+              --api-permissions e1fe6dd8-ba31-4d61-89e7-88639da4683d=Scope 64a6cdd6-aab1-4aaf-94b8-3cc8405e90d0=Scope
+      #
+      # section #2: provisioning the resources on Azure using bicep templates
+      #
       # The first step is to create the resource group: `contoso-traders-rg`.
       # The below step can also be manually executed as follows:
       # az deployment sub create --location {LOCATION} --template-file .\createResourceGroup.bicep
@@ -138,7 +178,7 @@ jobs:
           resource-group: ${{ env.RESOURCE_GROUP_NAME }}${{ vars.SUFFIX }}
           cluster-name: ${{ env.AKS_CLUSTER_NAME }}${{ vars.SUFFIX }}
       #
-      # section #2: deploy the carts api
+      # section #3: deploy the carts api
       #
       - name: docker build
         run: docker build src -f ./src/ContosoTraders.Api.Carts/Dockerfile -t ${{ env.ACR_NAME }}${{ vars.SUFFIX }}.azurecr.io/${{ env.CARTS_ACR_REPOSITORY_NAME }}:latest -t ${{ env.ACR_NAME }}${{ vars.SUFFIX }}.azurecr.io/${{ env.CARTS_ACR_REPOSITORY_NAME }}:${{ github.sha }}
@@ -162,7 +202,7 @@ jobs:
         with:
           inlineScript: echo "cartsApiEndpoint"="$(az keyvault secret show --vault-name ${{ env.KV_NAME }}${{ vars.SUFFIX }} --name cartsApiEndpoint --query value -o tsv)" >> $GITHUB_OUTPUT
       #
-      # section #3: deploy the products api
+      # section #4: deploy the products api
       #
       - name: install helm
         uses: Azure/setup-helm@v3
@@ -324,7 +364,7 @@ jobs:
         with:
           inlineScript: echo "productsApiEndpoint"="$(az keyvault secret show --vault-name ${{ env.KV_NAME }}${{ vars.SUFFIX }} --name productsApiEndpoint --query value -o tsv)" >> $GITHUB_OUTPUT
       #
-      # section #4: deploy the ui
+      # section #5: deploy the ui
       #
       - name: set REACT_APP_APIURLSHOPPINGCART
         run: echo "REACT_APP_APIURLSHOPPINGCART"="https://${{ steps.get-cartsApiEndpoint.outputs.cartsApiEndpoint }}/v1" >> $GITHUB_ENV
